styles/base.module.css
.content {
  display: flex;
  min-height: 75vh;
  margin: 50px 50px;
  z-index: 2;
}

.contentCenter {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.header {
  z-index: 10;
  width: 100%;
}

.cardTitle {
  text-align: center;
}

.image {
  position: absolute;
  left: 50%;
  border-radius: 50%;
  opacity: 0.3;
  z-index: 1;
  width: 475px;
  height: 500px;
}

